--- a/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/logo_blue_color"
     tools:context="com.example.smarthomeapp.SplashScreenActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
