--- a/SmartHomeApp/app/src/main/res/values/colors.xml
+++ b/SmartHomeApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="logo_blue_color">#00CEFF</color>
 </resources>
