restructured code to have presentation package

--- a/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/logo_blue_color"
-    tools:context="com.example.smarthomeapp.SplashScreenActivity">
+    tools:context="com.example.smarthomeapp.presentation.ui.SplashScreenActivity">
 
     <ImageView
         android:layout_width="wrap_content"
