bottom navigation bar imporved #4

--- a/SmartHomeApp/app/src/main/res/layout/activity_main.xml
+++ b/SmartHomeApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,10 +9,13 @@
 
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottom_navigation_bar"
-        android:layout_width="946dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
+        app:bb_behavior="underNavbar"
+        app:bb_activeTabColor="@color/logo_blue_color"
+        app:bb_inActiveTabColor="@color/unselected_menu_option"
         app:bb_tabXmlResource="@xml/bottom_bar_tabs"
-        tools:layout_editor_absoluteY="236dp"
-        tools:layout_editor_absoluteX="8dp" />
-</android.support.constraint.ConstraintLayout>
+        app:bb_titleTextAppearance="@style/BottomMenuTextSize"
+        app:bb_showShadow="true"/>
+</RelativeLayout>
