--- a/SmartHomeApp/app/src/main/res/values/colors.xml
+++ b/SmartHomeApp/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
     <color name="logo_blue_color">#00CEFF</color>
+    <color name="selected_menu_option">#FFFFFF</color>
+    <color name="unselected_menu_option">#c0c7d3</color>
 </resources>
