--- a/SmartHomeApp/app/src/main/res/values/styles.xml
+++ b/SmartHomeApp/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
         <!--<item name="android:textColor">#00FF00</item>-->
     </style>
 
+    <style name="BottomMenuTextSize">
+        <item name="android:textSize">20sp</item>
+        <!--<item name="android:typeface">monospace</item>-->
+    </style>
+
 </resources>
