--- a/SmartHomeApp/app/src/main/res/layout/activity_main.xml
+++ b/SmartHomeApp/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.smarthomeapp.presentation.ui.MainActivity">
 
+    <!--<fragment android:name="com.example.smarthomeapp.presentation.ui.BaseFragment->
+        <!-android:id="@+id/headlines_fragment"-->
+        <!--android:layout_above="@+id/bottom_navigation_bar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_above="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottom_navigation_bar"
