--- a/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/SmartHomeApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo"
+        android:src="@drawable/big_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
