added new icons and images | Divisions grid view init | #13 #5 #4

--- a/SmartHomeApp/app/src/main/res/layout/fragment_divisions.xml
+++ b/SmartHomeApp/app/src/main/res/layout/fragment_divisions.xml
@@ -1,17 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.smarthomeapp.presentation.ui.DivisionsFragment">
 
-    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/frameLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-    <!--</FrameLayout>-->
+    <GridView
+        android:id="@+id/divisions_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:numColumns="3"
+        android:horizontalSpacing="30dp"
+        android:layout_margin="@dimen/division_grid_margin"
+        android:stretchMode="columnWidth"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HEY"/>
 </FrameLayout>
