--- a/SmartHomeApp/app/src/main/res/layout/bottom_manual_menu.xml
+++ b/SmartHomeApp/app/src/main/res/layout/bottom_manual_menu.xml
@@ -21,7 +21,7 @@
             android:layout_width="@dimen/menu_icon_size"
             android:layout_height="@dimen/menu_icon_size"
             android:layout_marginTop="@dimen/menu_option_margin"
-            android:src="@drawable/ic_android_black_24dp"
+            android:src="@drawable/ic_apps"
             android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
         <TextView
             android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         <ImageView
             android:layout_width="@dimen/menu_icon_size"
             android:layout_height="@dimen/menu_icon_size"
-            android:src="@drawable/ic_menu_home"
+            android:src="@drawable/ic_home"
             android:layout_marginTop="@dimen/menu_option_margin"
             android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
         <TextView
@@ -66,7 +66,7 @@
         <ImageView
             android:layout_width="@dimen/menu_icon_size"
             android:layout_height="@dimen/menu_icon_size"
-            android:src="@drawable/ic_android_black_24dp"
+            android:src="@drawable/ic_notifications"
             android:layout_marginTop="@dimen/menu_option_margin"
             android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
         <TextView
@@ -89,7 +89,7 @@
         <ImageView
             android:layout_width="@dimen/menu_icon_size"
             android:layout_height="@dimen/menu_icon_size"
-            android:src="@drawable/ic_android_black_24dp"
+            android:src="@drawable/ic_settings_remote"
             android:layout_marginTop="@dimen/menu_option_margin"
             android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
         <TextView
@@ -112,7 +112,7 @@
         <ImageView
             android:layout_width="@dimen/menu_icon_size"
             android:layout_height="@dimen/menu_icon_size"
-            android:src="@drawable/ic_android_black_24dp"
+            android:src="@drawable/ic_settings"
             android:layout_marginTop="@dimen/menu_option_margin"
             android:layout_marginBottom="@dimen/menu_space_between_icon_title"/>
         <TextView
