--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.smarthomeapp.presentation.ui.BaseActivity">
+    tools:context="com.example.smarthomeapp.BaseActivity">
 
 </android.support.constraint.ConstraintLayout>
