--- a/app/src/main/res/layout/fragment_divisions.xml
+++ b/app/src/main/res/layout/fragment_divisions.xml
@@ -1,18 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.smarthomeapp.presentation.ui.DivisionsFragment">
+    android:layout_width="match_parent">
 
-    <GridView
-        android:id="@+id/divisions_grid_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:numColumns="3"
-        android:horizontalSpacing="30dp"
-        android:layout_margin="@dimen/division_grid_margin"
-        android:stretchMode="columnWidth"/>
+        android:id="@+id/no_divisions_view"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/noDivisionsIcon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_warning" />
+
+        <TextView
+            android:id="@+id/noDivisionsMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/no_divisions_all" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/divisions_view"
+        tools:context="com.example.smarthomeapp.divisions.DivisionsFragment">
+
+        <GridView
+            android:id="@+id/divisions_grid_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:numColumns="3"
+            android:horizontalSpacing="30dp"
+            android:layout_margin="@dimen/division_grid_margin"
+            android:stretchMode="columnWidth"/>
+
+    </FrameLayout>
+</RelativeLayout>
