--- a/app/src/main/res/layout/fragment_parent.xml
+++ b/app/src/main/res/layout/fragment_parent.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.smarthomeapp.presentation.ui.BaseFragment">
+    tools:context="com.example.smarthomeapp.BaseFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
