--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,31 +5,31 @@
     android:layout_width="match_parent">
     <item
         android:id="@+id/action_overview"
-        android:icon="@drawable/ic_android_black_24dp"
+        android:icon="@drawable/ic_android"
         android:title="@string/menu_overview"
         android:enabled="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_divisions"
-        android:icon="@drawable/ic_android_black_24dp"
+        android:icon="@drawable/ic_android"
         android:title="@string/menu_divisions"
         android:enabled="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_events"
-        android:icon="@drawable/ic_android_black_24dp"
+        android:icon="@drawable/ic_android"
         android:title="@string/menu_events"
         android:enabled="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_control"
-        android:icon="@drawable/ic_android_black_24dp"
+        android:icon="@drawable/ic_android"
         android:title="@string/menu_control"
         android:enabled="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_android_black_24dp"
+        android:icon="@drawable/ic_android"
         android:title="@string/menu_settings"
         android:enabled="true"
         app:showAsAction="ifRoom" />
