--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <!-- Customize your theme here. -->
         <item name="android:layout_width">@dimen/custom_button_width</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:typeface">monospace</item>
+        <!--<item name="android:typeface">monospace</item>-->
         <!--<item name="android:textColor">#00FF00</item>-->
     </style>
 
