Parsing users | created settings fragment

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,19 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""/>
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="@style/CustomButton"
@@ -91,6 +104,7 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/action_load_house_config"
                     android:layout_centerInParent="true"/>
+
                 <ProgressBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -99,6 +113,23 @@
                     android:visibility="gone"
                     android:layout_toRightOf="@+id/load_house_config_button"/>
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/load_xml_loader_check"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_check"
+                    android:layout_toRightOf="@+id/load_house_config_button"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/load_xml_loader_error"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_error_outline"
+                    android:layout_toRightOf="@+id/load_house_config_button"/>
             </RelativeLayout>
 
         </LinearLayout>
