--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,8 +28,8 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/credentials_margin"
+            android:layout_marginRight="@dimen/credentials_margin"
             android:layout_gravity="center"
             android:orientation="vertical">
 
@@ -74,24 +74,31 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/remember_me_padding_top_bottom"
+                android:paddingBottom="@dimen/remember_me_padding_top_bottom"
+                android:paddingRight="@dimen/remember_me_padding_right_left"
+                android:paddingLeft="@dimen/remember_me_padding_right_left"
+                android:id="@+id/remember_checkbox_layout">
 
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/remember_checkbox"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""/>
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
+                    android:text="@string/remember_me" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="@style/CustomButton"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in" />
 
             <RelativeLayout
