added some icons | ajusted divisions spacing | isolated loadHouseConfig async task | created login presenter

--- a/app/src/main/res/layout/fragment_divisions.xml
+++ b/app/src/main/res/layout/fragment_divisions.xml
@@ -38,6 +38,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:numColumns="3"
+            android:verticalSpacing="10dp"
             android:horizontalSpacing="30dp"
             android:layout_margin="@dimen/division_grid_margin"
             android:stretchMode="columnWidth"/>
