--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="logo_blue_color">#00CEFF</color>
     <color name="selected_menu_option">#FFFFFF</color>
     <color name="unselected_menu_option">#c0c7d3</color>
+
+    <color name="red_danger">#ff0033</color>
+    <color name="grey">#8d9bb2</color>
 </resources>
