remember me done!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="unselected_menu_option">#c0c7d3</color>
 
     <color name="red_danger">#ff0033</color>
-    <color name="grey">#8d9bb2</color>
+    <color name="grey">#c0c7d3</color>
 </resources>
