--- a/app/src/main/res/layout/divider.xml
+++ b/app/src/main/res/layout/divider.xml
@@ -6,6 +6,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/grey"/>
 
 </merge>
