fixed login input layout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -27,9 +26,10 @@
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/credentials_margin"
             android:layout_marginRight="@dimen/credentials_margin"
+            android:gravity="center"
             android:layout_gravity="center"
             android:orientation="vertical">
 
@@ -38,11 +38,12 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/logo_content_description"
                 android:src="@drawable/logo"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                 android:layout_gravity="center_horizontal"
                 />
 
             <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
+                android:layout_width="431dp"
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
@@ -51,17 +52,17 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_username"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
+                android:layout_width="431dp"
                 android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/password"
-                    android:layout_width="match_parent"
+                    android:layout_width="432dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
