--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -53,6 +54,6 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <include layout="@layout/divider"/>
+    <include layout="@layout/divider" />
 
-</RelativeLayout>
+</LinearLayout>
